@@ -1,3 +1,6 @@
+2021-01-18 (12.21)
+	COMMON: Handle octal escapes correctly
+
 2020-12-19 (12.20)
 	SDL: Update editor popup appearance
 
